--- a/pinelands_arthropods_2methods.Rmd
+++ b/pinelands_arthropods_2methods.Rmd
@@ -13,21 +13,25 @@ library(vegan)
 library(BiodiversityR)
 library(wesanderson)
 select <- dplyr::select
+# path for taxonomy and ecology lookup tables
+tax_data_path <- "data/arthropod.families_20220816.xlsx"
 
 # read in family name look up 
     # will use to match each OTU with an NCBI family name
     # created by looking up each entry in NCBI if it didn't 
       # have a family name yet from bioinformatics work
-famlookup <- read_xlsx("data/arthropod.families_20220729.xlsx", 
+famlookup <- read_xlsx(tax_data_path, 
                        sheet = "arthropod.families") %>%
-  select(final_family, final_ID = 'final species_name') %>%
+  select(final_lowest, 
+         final_ID = 'final species_name',
+         family:kingdom) %>%
   distinct()
 
 # read in family trait info (life mode)
     # note: class and order added with taxize package using script:
     # "scripts/adding_taxonomy_to_families.R"
     # terrestrial/aquatic info from Horren et al. database & others
-lifemode <- read_xlsx("data/arthropod.families_20220729.xlsx", 
+lifemode <- read_xlsx(tax_data_path, 
                       sheet = "arthropod.families.lifemode") %>%
   select(-person)
 
@@ -35,7 +39,7 @@ lifemode <- read_xlsx("data/arthropod.families_20220729.xlsx",
     # note: class and order added with taxize package using script:
     # "scripts/adding_taxonomy_to_families.R"
     # diet/feeding info from Horren et al. database & others
-diet <- read_xlsx("data/arthropod.families_20220729.xlsx", 
+diet <- read_xlsx(tax_data_path, 
                       sheet = "arthropod.families.diet") %>%
   select(-person) %>%
   # create a condensed diet/feeding classification
@@ -79,153 +83,79 @@ table(diet$diet.cat)
     # note: class and order added with taxize package using script:
     # "scripts/adding_taxonomy_to_families.R"
     # diet/feeding info from Horren et al. database & others
-size <- read_xlsx("data/arthropod.families_20220729.xlsx", 
+size <- read_xlsx(tax_data_path, 
                       sheet = "arthropod.families.size") %>%
   select(-person) %>%
   select(family:final_source)
 
 # read in OTU data for coleop primer set and add higher taxonomy
-coleop_all_step1 <- read_xlsx("data/coleop.9.final.meta.xlsx", 
+coleop <- read_xlsx("data/coleop.9.final.meta.xlsx", 
                     sheet = "Sheet1") %>%
   rename(final_ID = 'final species_name') %>%
   left_join(famlookup, by = "final_ID") %>%
-  left_join(select(size, class, order, final_family = family), 
-            by = "final_family") %>%
-  select(class, order, family = final_family, 
-         final_ID, final_rank = 'final rank', starts_with("sample"))
+  select(kingdom, phylum, class, order, family, 
+         final_lowest, final_ID, starts_with("sample")) %>%
+  mutate(primer = "coleop") %>%
+  select(primer, phylum, class, order, family, 
+         final_lowest,
+         final_ID, starts_with("sample")) %>%
+  arrange(primer, phylum, class, order, family, final_ID)
 
 # check for missed family-level arthropods in coleop dataset
-    # view this object and scan final_ID's with family == NA
-coleop_check <- coleop_all_step1 %>% 
+    # view this object and scan final_ID's with both family & order==NA
+    # should be only those not identified to order
+    # if "final_lowest" is family, then it was not read right by taxize
+coleop_check <- coleop %>% 
   filter(is.na(order)==T | order == "NA") %>%
   filter(family == "NA" | is.na(family)==T)
 rm(coleop_check)
 
-# used this code to get higher taxonomy for non-arthropods
-nonarth_step1 <- coleop_all_step1 %>%
-  filter(is.na(order)==T | order == "NA") %>%
-  filter(family != "NA" & is.na(family)==F)
- 
-# orders <- tax_name(sci = nonarth_step1$family, 
-#                    get = c("order", "class"), db = "ncbi")
-# dput(distinct(orders))
-
-# the resulting lookup table for higher taxonomy of other orders
-coleop_nonarth_lookup <-
-  data.frame(
-      family = c(
-        "Truncatellidae",
-        "Phascolosomatidae",
-        "Plethodontidae",
-        "Agriolimacidae",
-        "Vespertilionidae",
-        "Helicidae"
-      ),
-      order = c(
-        "Littorinimorpha",
-        "Phascolosomatiformes",
-        "Caudata",
-        "Stylommatophora",
-        "Chiroptera",
-        "Stylommatophora"
-      ),
-      class = c(
-        "Gastropoda",
-        "Phascolosomatida",
-        "Amphibia",
-        "Gastropoda",
-        "Mammalia",
-        "Gastropoda"
-      ),
-      phyllum = c(
-        "Mollusca",
-        "Sipuncula",
-        "Chordata",
-        "Mollusca",
-        "Chordata",
-        "Mollusca")
-    )
-  
-# add higher taxonomy to non-arthropods for coleop_all
-nonarth <- nonarth_step1 %>%
-  select(-class, -order, -final_rank) %>%
-  left_join(coleop_nonarth_lookup, by = "family")
-
-# add in higher taxonomy to coleop_all
-coleop <- coleop_all_step1 %>%
-  select(-final_rank) %>%
-  # filter out all non-arthropods & anything not identified to family
-  filter(is.na(order)==F & order != "NA") %>%
-  filter(family != "NA" & is.na(family)==F) %>%
-  # add column for phyllum
-  mutate(phyllum = "Arthropoda") %>%
-  bind_rows(nonarth) %>%
-  mutate(primer = "coleop") %>%
-  select(primer, phyllum, class, order, family, 
-         final_ID, starts_with("sample")) %>%
-  arrange(primer, phyllum, class, order, family, final_ID)
-
-rm(coleop_all_step1, coleop_nonarth_lookup,
-   nonarth, nonarth_step1)
-
-# ULTIMATELY WILL ADD PHYLLUM/CLASS/ORDER TAXONOMY TO FAMLOOKUP ABOVE
-# THAT WILL CONDENSE THE CODE CONSIDERABLY
-
 # read in OTU data for Zeale primer set
-zeale_step1 <- read_xlsx("data/zeale.fam.final.meta.xlsx", 
+zeale <- read_xlsx("data/zeale.fam.final.meta.xlsx", 
                    sheet ="Sheet1") %>%
   rename(final_ID = Identification) %>%
   left_join(famlookup, by = "final_ID") %>%
-  left_join(select(size, class, order, final_family = family), 
-            by = "final_family") %>%
-  select(class, order, family = final_family, 
-         final_ID, final_rank = rank, starts_with("sample"))
+  select(kingdom, phylum, class, order, family, 
+         final_lowest, final_ID, starts_with("sample")) %>%
+  mutate(primer = "zeale") %>%
+  select(primer, phylum, class, order, family, 
+         final_lowest,
+         final_ID, starts_with("sample")) %>%
+  arrange(primer, phylum, class, order, family, final_ID)
 
 # check for missed arthropods in zeale dataset
     # view this object and scan final_ID's with family == NA
-zeale_check <- zeale_step1 %>% 
+zeale_check <- zeale %>% 
   filter(is.na(order)==T | order == "NA") %>%
   filter(family == "NA" | is.na(family)==T)
 rm(zeale_check)
-
-# used this code to get higher taxonomy for non-arthropods
-nonarth_zeale_step1 <- zeale_step1 %>%
-  filter(is.na(order)==T | order == "NA") %>%
-  filter(family != "NA" & is.na(family)==F)
-
-# there are no non-arthropods in the Zeale dataset!
- 
-# finalize zeale
-zeale <- zeale_step1 %>%
-  select(-final_rank) %>%
-  # filter out anything not identified to family
-  filter(is.na(order)==F & order != "NA") %>%
-  filter(family != "NA" & is.na(family)==F) %>%
-  # add column for phyllum
-  mutate(phyllum = "Arthropoda",
-         primer = "zeale") %>%
-  select(primer, phyllum, class, order, family, 
-         final_ID, starts_with("sample")) %>%
-  arrange(primer, phyllum, class, order, family, final_ID)
-
-rm(nonarth_zeale_step1, zeale_step1)
 
 # combine data sets
 data_full <- zeale %>%
   bind_rows(coleop)
 
 # reads data just for arthropods
-art <- data_full %>%
-  filter(phyllum == "Arthropoda") %>%
+art_full <- data_full %>%
+  filter(phylum == "Arthropoda") %>%
   group_by(primer, family) %>%
   mutate(otu_id = paste0(family,"_", primer, "_", 1:length(primer))) %>%
   ungroup() %>%
-  mutate(lineage = paste0("r__Arthro.;c__", class, ";o__", order, ";f__", family))
+  mutate(lineage = paste0("r__Root (Arthropoda);c__", 
+                          class, ";o__", order, ";f__", family),
+         lineage_order = paste0("r__Root (Arthropoda);c__", 
+                          class, ";o__", order))
 
+art_order <- art_full %>%
+  filter(order != "NA" & is.na(order)==F)
+
+art <- art_full %>%
+  filter(family != "NA" & is.na(family)==F)
+  
 # make family-lineage lookup table
 lineage_lookup <- art %>%
   dplyr::select(family, lineage) %>%
   distinct()
+
 
 # otu count by family for arthropods (both primers separate)
 n_otus_primer <- art %>%
@@ -871,7 +801,69 @@ H_fish_rar <- diversity(fishfarm_rare, index = "shannon", MARGIN = 1, base = exp
 
 ```
 
+# Rarefied species accumulation curves by reads
+```{r}
 
+# MOTU accumulation curves by primer set (and order)
+names(art_order) # to get column numbers of matrix
+data_cols <- 8:44
+coleop_rare_mat <- art_order %>%
+  filter(primer == "coleop") %>%
+  select(data_cols) %>%
+  as.matrix()
+
+zeale_rare_mat <- art_order %>%
+  filter(primer == "zeale") %>%
+  select(data_cols) %>%
+  as.matrix()
+
+
+coleop_data <- list(coleop = coleop_rare_mat,
+                     zeale = zeale_rare_mat)
+
+coleop_data2 <- list(coleop = apply(coleop_rare_mat,1,sum),
+                     zeale = apply(zeale_rare_mat, 1, sum))
+
+# install.packages("iNEXT")
+library(iNEXT)
+data(spider)
+str(spider)
+iNEXT(spider, q=0, datatype="abundance")
+coleop_rare <- iNEXT(coleop_data[[1]], q=0, datatype="abundance")
+zeale_rare <- iNEXT(coleop_data[[2]], q=0, datatype="abundance")
+
+both_rare <- iNEXT(coleop_data2, q=0, datatype="abundance")
+
+plot(zeale_rare$iNextEst$`sample:3CS`$m,
+     zeale_rare$iNextEst$`sample:3CS`$qD,
+     type = "l", col = "blue",
+     ylim = c(0,140))
+
+points(coleop_rare$iNextEst$`sample:3CS`$m,
+     coleop_rare$iNextEst$`sample:3CS`$qD,
+     type = "l", col = "red")
+
+coleop_rare$DataInfo
+$iNextEst
+$AsyEst
+
+
+
+
+
+#### testing - saving if needed
+
+coleop_rare_mat
+coleop_squish <- apply(coleop_rare_mat, 2, sum) %>%
+  as.matrix() %>%
+  t()
+accum.test <- specaccum(coleop_rare_mat,
+                     y=data.frame(method = rep("coleop",
+                                               nrow(coleop_rare_mat))),
+                     factor='method',
+  method='rarefaction', conditioned=FALSE, plotit=FALSE)
+accum.test
+```
 
 
 
